@@ -327,6 +327,14 @@ Print text to stdout.
 Print text to stderr.
 
 .TP 
+\fB\*(T<\fBappend_file\fR\*(T>\fR 
+Append the file given as argument.
+
+.TP 
+\fB\*(T<\fBoverwrite_file\fR\*(T>\fR 
+Overwrite the file given as argument.
+
+.TP 
 \fB\*(T<\fBpad_percents\fR\*(T>\fR
 Pad percentages to this many decimals (0 = no padding)
 
