@@ -31,6 +31,12 @@ xftalpha 0.8
 # ... or maybe to stderr ?
 # out_to_stderr no
 
+# ... or a file ?
+#overwrite_file /this/file/will/contain/the/last/entry
+
+# ... or append to a file so you won't lose the last entry ?
+#append_file /this/file/will/contain/all/entries
+
 # MPD host/port
 # mpd_host localhost
 # mpd_port 6600
